PMM-2816 Fix layout issues with inputs

--- a/src/app/global-styles/buttons.scss
+++ b/src/app/global-styles/buttons.scss
@@ -1,7 +1,3 @@
-.button {
-  --inside-width: 140px;
-}
-
 .button-group {
   display: flex;
   margin-bottom: var(--main-bottom-indent);
@@ -16,12 +12,14 @@
 }
 
 .button {
+  --inside-width: 150px;
+
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
   height: var(--button-height, 40px);
-  padding: 0 .5rem;
+  padding: 0 .7rem;
   color: inherit;
   border: 1px solid var(--main-border-color);
   background-color: var(--page-background, transparent);
